--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 //Font
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,700;0,900;1,500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700;900&display=swap');
 
 //
 @import "mixin";
